Missing    Mail/Controller/Front/Index.php Modified   Mail/Model/Entity/Template.php Modified   Mail/Model/Table/Templates.php Modified   Mail/Model/Templates.php Modified   Mail/Package.php Missing    Mail/Resources/forms/index-add.php Missing    Mail/Resources/grids/index.php Missing    Mail/Resources/views/index/add.phtml Missing    Mail/Resources/views/index/index.phtml Add        Mail/Controller/Admin/Index.php Add        Mail/Resources/forms/admin/index-add.php Add        Mail/Resources/grids/admin/index.php Add        Mail/Resources/views/admin/index/add.phtml Add        Mail/Resources/views/admin/index/index.phtml

--- a/Mail/Resources/views/admin/index/add.phtml
+++ b/Mail/Resources/views/admin/index/add.phtml
@@ -1,6 +1,6 @@
 <?php
 
-$this->extend('layouts/default');
+$this->extend('layouts/admin/default');
 
 $label = ($this->item['id'] ? 'Редактиране' : 'Добавяне');
 
