--- a/Mail/Resources/views/admin/index/index.phtml
+++ b/Mail/Resources/views/admin/index/index.phtml
@@ -2,7 +2,7 @@
 
 $label = 'Email шаблони';
 
-$this->extend('layouts/default');
+$this->extend('layouts/admin/default');
 
 $this->section('title', $label);
 
